# website-linghang

./: AGENTS.md  QWEN.md  README.md  package-lock.json  package.json  requirements.txt
.zhanlu/: .spec-state.json
flask/api/: SshService.py  agent_analysis.py  agent_autowork.py  agent_ba.py  agent_base.py  agent_bug.py  agent_bugdiag.py  agent_chat.py  agent_coder.py  agent_component.py  agent_demo new.py  agent_dnstdio.py  agent_dnstdio_demo.py  agent_doc_review.py  agent_dotasklist.py  agent_lc_chat.py  agent_lc_demo.py  agent_lc_demopro.py  agent_lg_chat.py  agent_lg_demo.py  agent_lg_ft.py  agent_lg_mcp.py  agent_lg_tool.py  agent_mcp.py  agent_module.py  agent_scope.py  agent_se.py  agent_search.py  agent_tl.py  agent_tl_check.py  agent_uft.py  agent_utils.py  ai_health.py  api_chat.py  api_data.py  api_design.py  api_icenter.py  api_login.py  api_test.py  api_utils.py  (+37 more)
flask/api/boardAssembly/: M7LB4R_hw_cfg.7z  M7LB4R_hw_cfg.mk  board_assembly_api.py  (+2 more)
flask/api/graphdb_service/mcp-server-graphdb/: pyproject.toml
flask/api/graphdb_service/mcp-server-graphdb/src/mcp_server_graphdb/: __init__.py  graphdb.py
flask/config/: config.json  table.json
flask/data/: designs.db  sql_config.db
flask/doc/: review.md  sqlschma.txt
flask/test/: file_line_sum.py  mcp_proxy.py
tdesign/: .env  .env.development  .env.site  .npmrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tdesign/public/: analysis.html  ichangeguifan.html  jianjie.html  kaohe.html  test.html  zhidaoshouce.html  zhilianghongxian.html
tdesign/src/: main.ts
(+361 files in other folders)
