[project]
name = "mcp-server-graphdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "陈韬10243863", email = "chen.tao296@zte.com.cn" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "mcp[cli]>=1.12.4",
    "requests>=2.32.4",
]

[project.scripts]
server = "mcp_server_graphdb:run_server"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"
